# galsenai-llm

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/benchmark/: sample_benchmark.yaml
configs/eval/: sample_eval.yaml
configs/infer/: sample_infer.yaml  wolof_base_qwen.yaml
configs/merge/: sample_merge.yaml
configs/train/: sample_qwen_tool_calling.yaml  smoke_tiny_gpt2.yaml  smoke_unsloth_qwen_tool_calling.yaml
data/: README.md
data/samples/: benchmark_sample.jsonl  finetune_sample.jsonl
outputs/benchmark/: benchmark_predictions.jsonl  sample_report.json
outputs/eval/: sample_eval_report.json
resources/: shared.md  wolof_low_resource_strategy.md  wolof_run_guide.md  wolof_tokenizer_research_report.md
scripts/: build_wolof_extended_dataset.py  run_benchmark.sh  test_method_a_tokenizer.py
src/galsenai_llm/: afrobench.py  benchmark.py  cli.py  config.py  dataset.py  evaluate.py  generation.py  infer.py  io.py  merge.py  schemas.py  tool_registry.py  train.py  wolof_hub.py  wolof_pipeline.py
tests/: test_generation.py  test_wolof_pipeline.py
